--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,10 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.66.0",
     "axios": "^1.7.9",
+    "cookie-parser": "^1.4.7",
+    "express-session": "^1.18.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
