--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query": "^5.66.0",
     "axios": "^1.7.9",
     "cookie-parser": "^1.4.7",
+    "dotenv": "^16.4.7",
     "express-session": "^1.18.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
