--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.66.0",
     "axios": "^1.7.9",
+    "campustrack": "file:..",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express-session": "^1.18.1",
